--- a/assets/assets/translations/ar.json
+++ b/assets/assets/translations/ar.json
@@ -20,7 +20,7 @@
   "about_email_label": "البريد الإلكتروني",
   "about_email_value": "amrkhatab325@gmail.com",
   "about_phone_label": "الهاتف",
-  "about_phone_value": "+20 01095063139",
+  "about_phone_value": "+20 1095063139",
   "about_description": "أنا مطور فلاتر شغوف، لدي خبرة في إنشاء تطبيقات موبايل جميلة وعملية. أمتلك خبرة في تطوير التطبيقات متعددة المنصات وتقديم تجربة مستخدم استثنائية.",
   "stats_years_experience": "2+",
   "stats_years_label": "سنوات\nالخبرة",
@@ -42,7 +42,7 @@
   "experience_timeline__senior_junior_dev_company": "Code Academy",
   "experience_timeline__senior_junior_dev_period": "2020 - 2021",
   "experience_timeline__senior_junior_dev_description": "بدأت المسيرة المهنية في تطوير الموبايل، تعلمت إطار فلاتر وأفضل ممارسات تطوير البرمجيات.",
-  "education_degree": "بكالوريوس تكنولوجيا المعلومات",
+  "education_degree": "بكالوريوس في علوم الحاسب وتقنية المعلومات",
   "education_institution": "جامعة زازجيج",
   "education_period": "2024 - 2025",
   "education_description": "تخرجت بتقدير A+، متخصص في هندسة البرمجيات وتطوير تطبيقات الموبايل.",
@@ -55,11 +55,8 @@
   "skills_programming_languages_c": "سي",
   "skills_programming_languages_cpp": "سي بلس بلس",
   "skills_programming_languages_python": "بايثون",
-  "skills_programming_languages_javascript": "جافاسكريبت",
   "skills_programming_languages_java": "جافا",
   "skills_frameworks_libraries_flutter": "فلاتر",
-  "skills_frameworks_libraries_react": "ريأكت",
-  "skills_frameworks_libraries_nodejs": "نود جي إس",
   "skills_frameworks_libraries_firebase": "فايربيس",
   "skills_frameworks_libraries_google_maps": "خرائط جوجل",
   "skills_frameworks_libraries_git_github": "جيت وجيت هب",
@@ -72,12 +69,12 @@
   "email": "البريد الإلكتروني",
   "linkedin": "لينكدإن",
   "github": "جيت هب",
-  "name": "عمر علي",
+  "name": "عمرو خطاب",
   "title": "مطور فلاتر وهندسة برمجيات",
   "contact_number": "01095063139",
   "email_address": "amrkhatab325@gmail.com",
-  "linkedin_profile": "عمر علي",
-  "github_profile": "عمر",
+  "linkedin_profile": "عمرو خطاب",
+  "github_profile": "عمرو",
   "social_media_note": "في نهاية الصفحة ستجد روابط حساباتي على وسائل التواصل الاجتماعي",
   "skills_list_flutter": "فلاتر",
   "skills_list_dart": "دارت",
@@ -111,7 +108,7 @@
   "location": "الموقع",
   "social_media": "وسائل التواصل الاجتماعي",
   "email_address": "amrkhatab325@gmail.com",
-  "phone_number": "+20 01095063139",
+  "phone_number": "+20 1095063139",
   "location_address": "القاهرة، مصر",
   "send_message": "إرسال رسالة",
   "get_back_soon": "سأرد عليك في أقرب وقت ممكن.",
@@ -133,5 +130,18 @@
   "email_client_opened": "تم فتح تطبيق البريد الإلكتروني بنجاح!",
   "error_prefix": "خطأ: ",
   "email_subject_template": "مرحباً من الموقع الشخصي",
-  "email_body_template": "مرحباً عمرو\n\nأود أن أناقش معك..."
+  "email_body_template": "مرحباً عمرو،\n\nأود أن أناقش معك...",
+  "certifications": "شهادات ",
+  "license": "تراخيص",
+  "skills": "المهارات",
+  "latest": "الأحدث",
+  "projects": "المشاريع",
+  "checkItOut": "تحقق من ذلك: ",
+  "exploreMore": "استكشف المزيد>>",
+  "desDementai": "Dementai هو تطبيق مبني باستخدام Flutter مصمم لمساعدة الأفراد المصابين بالخرف ومقدمي الرعاية لهم. يتميز بواجهة سهلة الاستخدام تتيح لمقدمي الرعاية إدارة ومراقبة صحة المرضى بسهولة. يوفر التطبيق ميزات مثل تذكير بالأدوية، تتبع النشاطات اليومية، وخطط رعاية شخصية، لضمان تقديم أفضل دعم ممكن للأحباء.",
+  "desMassrofi": "تطبيقنا هو منصة إدارة أبوية مبتكرة تعتمد على الذكاء الاصطناعي، مصممة لتزويد الأهل بالقدرة على مراقبة والتحكم الشامل في أنشطة أطفالهم المدرسية وسلوكهم المالي. بتركيز على الأمان، الشفافية، والأتمتة الذكية، تربط المنصة بين أولياء الأمور وأنظمة المدارس وخدمات الكاشير والروتين اليومي للأطفال، مما يمكّنهم من اتخاذ قرارات مدروسة والتفاعل الفوري والإشراف الشخصي.",
+  "desAiChatBot": "مشروعي، AI ChatBot، هو مساعد ذكي للمحادثة مصمم لمحاكاة الحوار البشري الطبيعي وتقديم الدعم الفوري، المعلومات، وأتمتة المهام. تم بناؤه باستخدام أحدث تقنيات الذكاء الاصطناعي (AI) ومعالجة اللغة الطبيعية (NLP)، ويمكنه فهم مدخلات المستخدم، الرد بشكل سياقي، وتنفيذ الأوامر أو تقديم المحتوى حسب الحاجة.",
+  "desBookly": "Bookly هو تطبيق مبني باستخدام Flutter مصمم لتوفير تجربة قراءة سلسة وجذابة للمستخدمين. يتميز بواجهة سهلة الاستخدام تتيح تصفح، بحث، واكتشاف مجموعة واسعة من الكتب في مختلف الأنواع. بفضل تصميمه الأنيق والتنقل السلس، يسعى Bookly لتعزيز تجربة القراءة من خلال تقديم توصيات مخصصة، مراجعات للكتب، وإمكانية تتبع تقدم القراءة.",
+  "desEcommerce": "تطبيق التجارة الإلكترونية الخاص بنا هو منصة شاملة ومصممة لتقديم تجربة تسوق إلكترونية سلسة وجذابة للمستخدم. يمكن للعملاء تصفح والبحث عن المنتجات في فئات متعددة بسهولة، إضافة العناصر إلى السلة أو قائمة الرغبات، وإتمام المعاملات بشكل آمن باستخدام خيارات دفع متعددة.",
+  "desResponsiveDashboard": "Responsive Dashboard هو تطبيق Flutter يوفر واجهة مستخدم حديثة وأنيقة لإدارة المهام والأنشطة المختلفة. يتميز بتصميم متجاوب يتكيف مع أحجام الشاشات المختلفة، مما يضمن تجربة مستخدم سلسة على جميع الأجهزة. يشمل لوحة التحكم مخططات تفاعلية، تصورات للبيانات، وتنقل سهل، مما يساعد المستخدمين على متابعة مهامهم والبقاء منظمين."
 }
