--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -20,7 +20,7 @@
   "about_email_label": "Email",
   "about_email_value": "amrkhatab325@gmail.com",
   "about_phone_label": "Phone",
-  "about_phone_value": "+20 01095063139",
+  "about_phone_value": "+20 1095063139",
   "about_description": "I'm a passionate Flutter developer with expertise in creating beautiful, functional mobile applications. I have experience in developing cross-platform apps that deliver exceptional user experiences. My journey in mobile development has equipped me with strong problem-solving skills and a deep understanding of modern app development practices.",
   "stats_years_experience": "2+",
   "stats_years_label": "Years\nExperience",
@@ -30,7 +30,7 @@
   "stats_clients_label": "Happy\nClients",
   "experience_title": "Experience & Education",
   "experience_education_title": "Education",
-  "experience_timeline__senior_flutter_dev_title": "Senior Flutter Developer",
+  "experience_timeline__senior_flutter_dev_title": "Junior Flutter Developer",
   "experience_timeline__senior_flutter_dev_company": "Tech Company Inc.",
   "experience_timeline__senior_flutter_dev_period": "2022 - Present",
   "experience_timeline__senior_flutter_dev_description": "Leading development of cross-platform mobile applications using Flutter. Collaborated with design teams to implement pixel-perfect UIs and optimized app performance.",
@@ -42,7 +42,7 @@
   "experience_timeline__senior_junior_dev_company": "Code Academy",
   "experience_timeline__senior_junior_dev_period": "2020 - 2021",
   "experience_timeline__senior_junior_dev_description": "Started career in mobile development, learning Flutter framework and best practices in software development.",
-  "education_degree": "Bachelor of Information Technology",
+  "education_degree": "Bachelor of computer and Information Technology",
   "education_institution": "Zazgig University",
   "education_period": "2024 - 2025",
   "education_description": "Graduated With A+ , specialized in software engineering and mobile development",
@@ -55,11 +55,8 @@
   "skills_programming_languages_c": "C",
   "skills_programming_languages_cpp": "C++",
   "skills_programming_languages_python": "Python",
-  "skills_programming_languages_javascript": "JavaScript",
   "skills_programming_languages_java": "Java",
   "skills_frameworks_libraries_flutter": "Flutter",
-  "skills_frameworks_libraries_react": "React",
-  "skills_frameworks_libraries_nodejs": "Node.js",
   "skills_frameworks_libraries_firebase": "Firebase",
   "skills_frameworks_libraries_google_maps": "Google Maps",
   "skills_frameworks_libraries_git_github": "Git And Github",
@@ -72,11 +69,11 @@
   "email": "Email",
   "linkedin": "LinkedIn",
   "github": "Github",
-  "name": "Amr Mohamed Khatab",
+  "name": "Amr Khatab",
   "title": "Flutter Developer & Software Engineering",
   "contact_number": "01095063139",
   "email_address": "amrkhatab325@gmail.com",
-  "linkedin_profile": "Amr Mohamed Khatab",
+  "linkedin_profile": "amr Khatab",
   "github_profile": "amr",
   "social_media_note": "In the end you will find the links to my social media accounts",
   "skills_list_flutter": "Flutter",
@@ -133,5 +130,18 @@
   "email_client_opened": "Email client opened successfully!",
   "error_prefix": "Error: ",
   "email_subject_template": "Hello from Portfolio",
-  "email_body_template": "Hi amr,\n\nI would like to discuss..."
-}
+  "email_body_template": "Hi Amr ,\n\nI would like to discuss...",
+  "certifications": "Certifications",
+  "license": "Licenses",
+  "skills": "Skills",
+  "latest":"Latest",
+  "projects": "Projects",
+  "checkItOut": "Check it out: ",
+  "exploreMore": "Explore More>>",
+   "desDementai":"Dementai is a Flutter-based application designed to assist individuals with dementia and their caregivers. It offers a user-friendly interface that allows caregivers to easily manage and monitor the well-being of dementia patients. The app provides features such as medication reminders, daily activity tracking, and personalized care plans, ensuring that caregivers can provide the best possible support for their loved ones.,"
+    ,"desMassrofi": "Our application is an innovative, AI-driven parental\nmanagement platform designed to give parents\ncomprehensive oversight and control over their children’s\nschool-related activities and spending behavior.\nBuilt with a focus on security, transparency, and smart\nautomation, the platform seamlessly connects parents\nwith school systems, cashier services, and their children's\ndaily routines — empowering informed decisions, real-\ntime engagement, and personalized oversight."
+    ,"desAiChatBot": "My project, AI ChatBot, is an intelligent conversational assistant designed to simulate natural human dialogue and provide real-time support, information, and task automation. Built using cutting-edge Artificial Intelligence (AI) and Natural Language Processing (NLP) technologies, the chatbot can understand user input, respond contextually, and carry out actions or deliver content as needed."
+    ,"desBookly":"Bookly is a Flutter-based application designed to provide users with a seamless and engaging reading experience. The app features a user-friendly interface that allows users to browse, search, and discover a wide range of books across various genres. With its sleek design and intuitive navigation, Bookly aims to enhance the reading journey by offering personalized recommendations, book reviews, and the ability to track reading progress.",
+  "desEcommerce":"Our eCommerce application is a comprehensive and user-centric platform designed to deliver a smooth and engaging online shopping experience. It enables customers to effortlessly browse and search for products across diverse categories, add items to their cart or wishlist, and complete secure transactions with multiple payment options.",
+  "desResponsiveDashboard":"Responsive Dashboard is a Flutter application that provides a sleek and modern user interface for managing various tasks and activities. It features a responsive design that adapts to different screen sizes, ensuring a seamless user experience across devices. The dashboard includes interactive charts, data visualization, and intuitive navigation, making it easy for users to monitor their tasks and stay organized."
+  }
